@@ -62,6 +62,7 @@ abstract class Nag_Tasklists_Base
                 strval(new Horde_Support_Randomid()),
                 $this->getDefaultShareName()
             );
+            $this->prepareDefaultShare($share);
             $this->shares->addShare($share);
             return $share->getName();
         }
@@ -73,4 +74,13 @@ abstract class Nag_Tasklists_Base
      * @return string The name of a default share.
      */
     abstract protected function getDefaultShareName();
+
+    /**
+     * Add any modifiers required to the share in order to mark it as default.
+     *
+     * @param Horde_Share_Object $share The new default share.
+     */
+    protected function prepareDefaultShare($share)
+    {
+    }
 }
