@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [gwr] Mark the initial default share as such with the Kolab backend.
 * [gwr] Always mark the initial share as default tasklist.
 * [jan] Move complete task list management into the sidebar.
 * [jan] Allow to edit task list color in traditional view.
@@ -1170,6 +1171,7 @@
    <date>2012-08-31</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [gwr] Mark the initial default share as such with the Kolab backend.
 * [gwr] Always mark the initial share as default tasklist.
 * [jan] Move complete task list management into the sidebar.
 * [jan] Allow to edit task list color in traditional view.
