@@ -2,6 +2,7 @@
 v4.0.0-git
 ----------
 
+[gwr] Mark the initial default share as such with the Kolab backend.
 [gwr] Always mark the initial share as default tasklist.
 [jan] Move complete task list management into the sidebar.
 [jan] Allow to edit task list color in traditional view.
